New in 1.2:
* New functions u8_pcpy, u16_pcpy, u32_pcpy, similar to mempcpy.
* New constant _libunistring_unicode_version.
* The UTF-8 decoder functions, especially u8_mbtouc, are now more Unicode
  Standard compliant.
* Fixed a bug in the *printf functions: In the %U, %lU, %llU directives, a
  negative width given as an argument did not trigger left-justification.

New in 1.1:
* The data tables and algorithms have been updated to Unicode version 15.0.0.

New in 1.0:
* The license has changed from "LGPLv3+ or GPLv2" to "LGPLv3+ or GPLv2+".
* The data tables and algorithms have been updated to Unicode version 14.0.0.
* The functions u8_uctomb, u16_uctomb, u32_uctomb now support strings larger
  than 2 GiB by taking an 'n' argument of type ptrdiff_t (instead of int).
* The functions u*_possible_linebreaks and u*_width_linebreaks now make it
  easier to work with strings that contain CR-LF sequences: In this case,
  in the returned array, it will return UC_BREAK_CR_BEFORE_LF followed by
  UC_BREAK_MANDATORY (instead of twice UC_BREAK_MANDATORY).
* There are new properties for recognizing pictographic symbols and
  regional indicators:
    - UC_PROPERTY_EMOJI                  uc_is_property_emoji
    - UC_PROPERTY_EMOJI_PRESENTATION     uc_is_property_emoji_presentation
    - UC_PROPERTY_EMOJI_MODIFIER         uc_is_property_emoji_modifier
    - UC_PROPERTY_EMOJI_MODIFIER_BASE    uc_is_property_emoji_modifier_base
    - UC_PROPERTY_EMOJI_COMPONENT        uc_is_property_emoji_component
    - UC_PROPERTY_EXTENDED_PICTOGRAPHIC  uc_is_property_extended_pictographic
    - UC_PROPERTY_REGIONAL_INDICATOR     uc_is_property_regional_indicator
* Fixed multithread-safety bugs on Cygwin, native Windows, and Haiku.

New in 0.9.10:
* The functions
    u8_casing_prefix_context, u8_casing_prefixes_context,
    u8_casing_suffix_context, u8_casing_suffixes_context,
    u16_casing_prefix_context, u16_casing_prefixes_context,
    u16_casing_suffix_context, u16_casing_suffixes_context,