@@ -1,4 +1,4 @@
-# Copyright (C) 2002-2023 Free Software Foundation, Inc.
+# Copyright (C) 2002-2024 Free Software Foundation, Inc.
 #
 # This file is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -143,6 +143,7 @@
 #  unictype/ctype-xdigit \
 #  unictype/decimal-digit \
 #  unictype/digit \
+#  unictype/incb-all \
 #  unictype/joininggroup-all \
 #  unictype/joiningtype-all \
 #  unictype/mirror \
@@ -507,6 +508,7 @@ gl_MODULES([
   unictype/ctype-xdigit
   unictype/decimal-digit
   unictype/digit
+  unictype/incb-all
   unictype/joininggroup-all
   unictype/joiningtype-all
   unictype/mirror
