@@ -1,5 +1,8 @@
 New in 1.2:
+* The data tables and algorithms have been updated to Unicode version 15.1.0.
 * New functions u8_pcpy, u16_pcpy, u32_pcpy, similar to mempcpy.
+* New functions uc_indic_conjunct_break_name, uc_indic_conjunct_break_byname,
+  uc_indic_conjunct_break.
 * New constant _libunistring_unicode_version.
 * The UTF-8 decoder functions, especially u8_mbtouc, are now more Unicode
   Standard compliant.
